nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec: # spec for deployment
  replicas: 2
  selector:
    matchLabels: 
      app: nginx
  template: # below applies to pod
    metadata:
      labels:
        app: nginx
    spec: # blueprint for a pod
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80 # where it runs
