mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels: 
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:         # to connect to pod through label (Service по selector находит эти pod’ы)
    app: mongo-express
  type: LoadBalancer # kubectl get service -> external ip is pending, than write minikube service mongo-express-service
  ports:            # expose service ports
  - protocol: TCP
    port: 8081
    targetPort: 8081 # containerPort of deployment
    nodePort: 30000
