mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
          - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:         # to connect to pod through label (Service по selector находит эти pod’ы)
    app: mongodb
  ports:            # expose service ports
  - protocol: TCP
    port: 27017
    targetPort: 27017 # containerPort of deployment
